Model version query logs & latest version support
