# packages/server/docs/swagger.json
@@ -2463,6 +2463,12 @@
                         "name": "branchName",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Include logs",
+                        "name": "withLogs",
+                        "in": "query"
                     }
                 ],
                 "responses": {
